// QuizzUp - Database schema
// Version documentaire cible
// Convention statuts : 0 = inactive, 1 = active, 2 = deleted

Table companies {
  id bigint [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null]
  payment_info text

  status smallint [not null, default: 1, note: '0=inactive, 1=active, 2=deleted']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (name) [unique, name: 'companies_name_unique_ci']
    (email) [unique, name: 'companies_email_unique_ci']
    (status) [name: 'companies_status_index']
  }
}

Table admins {
  id bigint [pk, increment]
  company_id bigint [not null]

  role varchar(50) [not null, note: 'admin, staff']
  firstname varchar(255)
  lastname varchar(255)
  username varchar(255) [not null]
  email varchar(255) [not null]
  mdp_hash varchar(255) [not null]

  status smallint [not null, default: 1, note: '0=inactive, 1=active, 2=deleted']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (company_id) [name: 'admins_company_id_index']
    (company_id, status) [name: 'admins_company_id_status_index']
    (username) [unique, name: 'admins_username_unique_ci']
    (email) [unique, name: 'admins_email_unique_ci']
  }
}

Table admin_sessions {
  id uuid [pk]
  admin_id bigint [not null]

  created_at timestamptz [not null, default: `now()`]
  last_seen_at timestamptz [not null, default: `now()`]
  revoked_at timestamptz

  indexes {
    (admin_id) [name: 'admin_sessions_admin_id_index']
    (last_seen_at) [name: 'admin_sessions_last_seen_at_index']
    (revoked_at) [name: 'admin_sessions_revoked_at_index']
  }
}

Table players {
  id bigint [pk, increment]

  firstname varchar(255)
  lastname varchar(255)
  username varchar(255) [not null]
  email varchar(255)

  status smallint [not null, default: 1, note: '0=inactive, 1=active, 2=deleted']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (username) [unique, name: 'players_username_unique_ci']
    (email) [unique, name: 'players_email_unique_ci']
    (status) [name: 'players_status_index']
  }
}

Table themes {
  id bigint [pk, increment]
  admin_id bigint [not null]

  name varchar(255) [not null]
  mode varchar(50) [not null, note: 'classic, image, audio, mixed']

  status smallint [not null, default: 1, note: '0=inactive, 1=active, 2=deleted']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (admin_id) [name: 'themes_admin_id_index']
    (name) [name: 'themes_name_index']
    (status) [name: 'themes_status_index']
  }
}

Table questions {
  id bigint [pk, increment]
  admin_id bigint [not null]
  theme_id bigint [not null]

  question text [not null]
  type_media varchar(50) [note: 'none, image, audio, video']
  media_url text

  status smallint [not null, default: 1, note: '0=inactive, 1=active, 2=deleted']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (admin_id) [name: 'questions_admin_id_index']
    (theme_id) [name: 'questions_theme_id_index']
    (status) [name: 'questions_status_index']
  }
}

Table answers {
  id bigint [pk, increment]
  admin_id bigint [not null]
  question_id bigint [not null]

  response text [not null]
  is_correct boolean [not null, default: false]

  status smallint [not null, default: 1, note: '0=inactive, 1=active, 2=deleted']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (admin_id) [name: 'answers_admin_id_index']
    (question_id) [name: 'answers_question_id_index']
    (status) [name: 'answers_status_index']
  }
}

Table games {
  id bigint [pk, increment]
  admin_id bigint [not null]

  nb_round integer [not null, default: 1]
  time integer [not null, note: 'Temps par question ou par round en secondes']
  winner bigint
  room varchar(50) [not null]
  mode varchar(50) [not null, note: 'classic, duel, party, training']

  status smallint [not null, default: 1, note: '0=inactive/draft, 1=active, 2=deleted']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (admin_id) [name: 'games_admin_id_index']
    (winner) [name: 'games_winner_index']
    (room) [unique, name: 'games_room_unique']
    (status) [name: 'games_status_index']
  }
}

Table game_themes {
  game_id bigint [not null]
  theme_id bigint [not null]

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, theme_id) [pk, name: 'game_themes_pk']
    (theme_id) [name: 'game_themes_theme_id_index']
  }
}

Table rounds {
  id bigint [pk, increment]
  game_id bigint [not null]
  theme_id bigint [not null]
  question_id bigint [not null]

  hierarchy integer [not null, note: 'Ordre du round dans la game']
  name varchar(255)

  type_multimedia varchar(50) [note: 'none, image, audio, video']
  multimedia text

  status smallint [not null, default: 1, note: '0=inactive, 1=active, 2=deleted']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (game_id) [name: 'rounds_game_id_index']
    (theme_id) [name: 'rounds_theme_id_index']
    (question_id) [name: 'rounds_question_id_index']
    (game_id, hierarchy) [unique, name: 'rounds_game_hierarchy_unique']
    (status) [name: 'rounds_status_index']
  }
}

Table game_players {
  game_id bigint [not null]
  player_id bigint [not null]

  score integer [not null, default: 0]
  joined_at timestamptz [not null, default: `now()`]
  finished_at timestamptz

  indexes {
    (game_id, player_id) [pk, name: 'game_players_pk']
    (player_id) [name: 'game_players_player_id_index']
  }
}

Table player_answers {
  id bigint [pk, increment]

  game_id bigint [not null]
  round_id bigint [not null]
  player_id bigint [not null]
  question_id bigint [not null]
  answer_id bigint [not null]

  is_correct boolean [not null, default: false]
  answered_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id) [name: 'player_answers_game_id_index']
    (round_id) [name: 'player_answers_round_id_index']
    (player_id) [name: 'player_answers_player_id_index']
    (question_id) [name: 'player_answers_question_id_index']
    (answer_id) [name: 'player_answers_answer_id_index']
    (game_id, round_id, player_id, question_id, answer_id) [unique, name: 'player_answers_unique']
  }
}

// Relations existantes
Ref: admins.company_id > companies.id [delete: restrict]
Ref: admin_sessions.admin_id > admins.id [delete: cascade]

// Relations joueurs / parties
Ref: games.admin_id > admins.id [delete: restrict]
Ref: games.winner > players.id [delete: set null]

Ref: game_players.game_id > games.id [delete: cascade]
Ref: game_players.player_id > players.id [delete: cascade]

// Relations thèmes
Ref: themes.admin_id > admins.id [delete: restrict]

Ref: game_themes.game_id > games.id [delete: cascade]
Ref: game_themes.theme_id > themes.id [delete: restrict]

// Relations questions / réponses
Ref: questions.admin_id > admins.id [delete: restrict]
Ref: questions.theme_id > themes.id [delete: restrict]

Ref: answers.admin_id > admins.id [delete: restrict]
Ref: answers.question_id > questions.id [delete: cascade]

// Relations rounds générés pour une game
Ref: rounds.game_id > games.id [delete: cascade]
Ref: rounds.theme_id > themes.id [delete: restrict]
Ref: rounds.question_id > questions.id [delete: restrict]

// Relations réponses joueur
Ref: player_answers.game_id > games.id [delete: cascade]
Ref: player_answers.round_id > rounds.id [delete: cascade]
Ref: player_answers.player_id > players.id [delete: cascade]
Ref: player_answers.question_id > questions.id [delete: restrict]
Ref: player_answers.answer_id > answers.id [delete: restrict]
